navbar made responsive

--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -2,4 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
+.rounded-circle{
+    @apply rounded-full shadow-lg shadow-gray-600  p-3 flex justify-center items-center;
+}
