--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -5,7 +5,9 @@
 body {
   background-color: #fffafa;
 }
-
+.main_style {
+  @apply max-w-[90%] md:max-w-[80%] xl:max-w-[70%] mx-auto h-screen;
+}
 .roboto {
   font-family: var(--font-roboto);
 }
@@ -14,5 +16,5 @@ body {
 }
 
 .rounded-circle {
-  @apply rounded-full shadow-lg shadow-gray-600  p-3 flex justify-center items-center;
+  @apply rounded-full shadow-lg shadow-gray-600  p-3 flex justify-center items-center text-secondaryViolet  hover:scale-110 cursor-pointer duration-500;
 }
