--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -6,7 +6,7 @@ body {
   background-color: #fffafa;
 }
 .main_style {
-  @apply max-w-[90%] md:max-w-[80%] xl:max-w-[70%] mx-auto h-screen;
+  @apply max-w-[90%] md:max-w-[80%] xl:max-w-[70%] mx-auto md:h-screen;
 }
 .roboto {
   font-family: var(--font-roboto);
@@ -17,4 +17,10 @@ body {
 
 .rounded-circle {
   @apply rounded-full shadow-lg shadow-gray-600  p-3 flex justify-center items-center text-secondaryViolet  hover:scale-110 cursor-pointer duration-500;
+}
+.title {
+  @apply text-2xl md:text-3xl lg:text-4xl text-center playfairDisplay font-semibold;
+}
+.line {
+  @apply w-10 h-1 mx-auto my-2 bg-secondaryViolet rounded;
 }
